--- a/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
+++ b/ShippingController(V1.0)/ShippingController(V1.0)/Forms/Master Forms/Admin.Master
@@ -115,7 +115,7 @@
                     <form id="form1" runat="server">
 
                         <div>
-                            <asp:Menu ID="Menu1" runat="server" Orientation="Horizontal" BackColor="#FFFFFF" DynamicHorizontalOffset="8" Font-Bold="True" Font-Italic="True" Font-Names="Verdana" Font-Size="Medium" ForeColor="#FFFFFF" StaticSubMenuIndent="0px" OnMenuItemClick="Menu1_MenuItemClick">
+                            <asp:Menu ID="Menu1" runat="server" Orientation="Horizontal" BackColor="#FFFFFF" DynamicHorizontalOffset="8" CssClass="menumaster" StaticSubMenuIndent="0px" OnMenuItemClick="Menu1_MenuItemClick">
                                 <DynamicHoverStyle BackColor=" #000099" ForeColor="White" />
                                 <DynamicMenuItemStyle HorizontalPadding="5px" VerticalPadding="5px" />
                                 <DynamicMenuStyle BackColor=" #0099CC" BorderColor="BLUE" />
@@ -149,7 +149,7 @@
                                     <asp:MenuItem NavigateUrl="~/Forms/Web Forms/frmChart.aspx" Text="Reports" ToolTip="Reports" Value="Reports"></asp:MenuItem>
                                 </Items>
                                 <StaticHoverStyle BackColor="#99CCFF" ForeColor="#336699" />
-                                <StaticMenuItemStyle Font-Bold="True" Font-Italic="True" Font-Size="Large" ForeColor="blue" HorizontalPadding="100px" ItemSpacing="80px" VerticalPadding="10px" />
+                                <StaticMenuItemStyle Font-Bold="True" Font-Italic="false" Font-Size="Large" ForeColor="blue" HorizontalPadding="15px" ItemSpacing="25px" VerticalPadding="15px" />
                                 <StaticMenuStyle BackColor="#FFFFFF" BorderColor="blue" />
                                 <StaticSelectedStyle BackColor="#0099CC" />
                             </asp:Menu>
